# bakdata-grpc

./: protodep.toml  pyproject.toml
.github/workflows/: review.yml
protofile/: produceurl.proto  produceurl_pb2.py  produceurl_pb2_grpc.py
src/: .env  client.py  conftest.py  server.py
src/config/: default.yml
src/services/: GetNewsUrls.py
src/tests/: test_server.py
